começando o header desktop e adicionando as imagens

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,9 +1,10 @@
-<div class="header">
-  <div class="socialbar">
-    <ul>
-      <li>9.9999-9999</li>
-      <li><a>LinkedIn</a></li>
-      <li><a>Facebook</a></li>
+  <div class="navbar">
+    <div class="imagediv">
+      <img src="../../../assets/logotools.png"/>
+    </div>
+    <ul class="listadesktop">
+      <li>Quem Somos</li>
+      <li>Serviços</li>
+      <li>Contato</li>
     </ul>
   </div>
-</div>
