--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,4 +1,11 @@
+.navbar {
+    font-family: 'Century Gothic';
+    width: 100%;
+}
 @media only screen and (min-width: 700px) {
+    nav {
+        display: none;
+    }
     .navbar {
         margin:0;
         padding:0;
@@ -7,7 +14,7 @@
         flex-direction: row;
         align-items: center;
     }
-    .navbar ul {
+    .navbar .listadesktop {
         margin: 0;
         padding: 0;
         width: 70%;
@@ -16,15 +23,14 @@
         flex-direction: row;
         justify-content: flex-end;
         align-items: center;
-        font-family: 'Century Gothic';
         font-size: 22px;
         /* font-weight: bold; */
         color:#29166f;
     }
-    .navbar ul li {
+    .navbar .listadesktop li {
         margin-left: 50px;
     }
-    .navbar ul li:last-child {
+    .navbar .listadesktop li:last-child {
         margin-right: 170px;
     }
     .navbar .imagediv{
@@ -39,9 +45,121 @@
     }
 }
 @media only screen and (max-width: 699px) {
+    .listadesktop {
+        display: none;
+    }
     .navbar {
         margin:0;
         padding:0;
-        background-color: red;
+        border-bottom: 1px solid black;
+    }
+    .navbar .imagediv{
+        width:30%;
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .navbar .imagediv img {
+        height: 100%;
+    }
+    a
+    {
+        text-decoration: none;
+        color: #232323;
+        transition: color 0.3s ease;
+    }
+    a:hover
+    {
+        color: #29166f;
+    }
+
+    #menuToggle
+    {
+        display: block;
+        position: absolute;
+        top: 35px;
+        right: 50px;
+        z-index: 1;
+        -webkit-user-select: none;
+        user-select: none;
+    }
+
+    #menuToggle input
+    {
+        display: block;
+        width: 40px;
+        height: 32px;
+        position: absolute;
+        top: -7px;
+        left: -5px;
+        cursor: poiter;
+        opacity: 0; /* hide this */
+        z-index: 2; /* and place it over the hamburger */
+        -webkit-touch-callout: none;
+    }
+    #menuToggle span
+    {
+        display: block;
+        width: 33px;
+        height: 4px;
+        margin-bottom: 5px;
+        position: relative;
+        background: #cdcdcd;
+        border-radius: 3px;
+        z-index: 1;
+        transform-origin: 4px 0px;
+        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                    background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                    opacity 0.55s ease;
+    }
+
+    #menuToggle span:first-child
+    {
+        transform-origin: 0% 0%;
+    }
+
+    #menuToggle span:nth-last-child(2)
+    {
+        transform-origin: 0% 100%;
+    }
+    #menuToggle input:checked ~ span
+    {
+        opacity: 1;
+        transform: rotate(45deg) translate(-2px, -1px);
+        background: #232323;
+    }
+    #menuToggle input:checked ~ span:nth-last-child(3)
+    {
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+    }
+    #menuToggle input:checked ~ span:nth-last-child(2)
+    {
+        transform: rotate(-45deg) translate(0, -1px);
+    }
+    #menu
+    {
+        position: absolute;
+        width: 300px;
+        margin: -100px 0 0 -250px;
+        padding: 50px;
+        padding-top: 125px;
+        background: #ededed;
+        list-style-type: none;
+        -webkit-font-smoothing: antialiased;
+        /* to stop flickering of text in safari */
+        transform-origin: 0% 0%;
+        transform: translate(100%, 0);
+        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+    }
+    #menu li
+    {
+        padding: 10px 0;
+        font-size: 32px;
+    }
+    #menuToggle input:checked ~ ul
+    {
+        transform: none;
     }
 }
