--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,4 +7,17 @@
       <li>Serviços</li>
       <li>Contato</li>
     </ul>
+    <nav role="navigation">
+      <div id="menuToggle">
+        <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+        <ul id="menu">
+          <a href="#quemsomos"><li>Quem Somos</li></a>
+          <a href="#servicos"><li>Serviços</li></a>
+          <a href="#contato"><li>Contato</li></a>
+        </ul>
+      </div>
+    </nav>
   </div>
