--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,9 +3,9 @@
     <img src="../../../assets/logotools.png"/>
   </div>
   <ul class="listadesktop">
-    <li>Quem Somos</li>
-    <li>Serviços</li>
-    <li>Contato</li>
+    <li><a href="#quemsomos">Quem Somos</a></li>
+    <li><a href="#servicos">Serviços</a></li>
+    <li><a href="#contato">Contato</a></li>
   </ul>
   <nav role="navigation">
     <div id="menuToggle">
@@ -16,7 +16,7 @@
       <ul id="menu">
         <a href="#quemsomos"><li>Quem Somos</li></a>
         <a href="#servicos"><li>Serviços</li></a>
-         <a href="#contato"><li>Contato</li></a>
+        <a href="#contato"><li>Contato</li></a>
       </ul>
     </div>
   </nav>
