--- a/src/app/shared/servicos/servicos.component.css
+++ b/src/app/shared/servicos/servicos.component.css
@@ -25,6 +25,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    transition: 0.6s;
+}
+.cordocard:hover {
+    background-color: rgba(0,0,0,0.6);
+    font-size: 105%;
 }
 @media only screen and (min-width: 700px) {
     #servicos {
@@ -49,5 +54,4 @@
     .card h1 {
         margin:0;
     }
-
 }
