--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -34,5 +34,9 @@
           <p>filizola.bruno@gmail.com</p>
       </div>
   </div>
-
 </div>
+    <div class="creditos">
+      <p align="center">
+        Desenvolvimento por Amanda Filizola, Design por Bruno Lima
+      </p>
+    </div>
