--- a/src/app/shared/quemsomos/quemsomos.component.html
+++ b/src/app/shared/quemsomos/quemsomos.component.html
@@ -9,6 +9,10 @@
 <div class="nossosclientes">
     <h2>Nossos clientes</h2>
 		<div class="clientes">
+				<img src="../../../assets/florescer.jpeg">
+				<img src="../../../assets/eduardofeitosa.jpeg">
+				<img src="../../../assets/hi.jpeg">
+				<img src="../../../assets/portodigital.jpeg">
 				<img src="../../../assets/novonordisk.png">	
 				<img src="../../../assets/gruposimoes.png">	
 				<img src="../../../assets/grupojb.png">		
