--- a/src/app/shared/servicos/servicos.component.html
+++ b/src/app/shared/servicos/servicos.component.html
@@ -1,26 +1,26 @@
 <div id="servicos">
         <div class="card" id="consultoria">
             <div class="cordocard">
-                <h1 align="center" class="titulodocard">Consultoria em Gestão</h1>
-                <h2 align="center" class="textodocard">A consultoria em gestão analisa as condições financeiras, processuais, a estratégia e a gestão da empresa.</h2>
+                <h1 align="center" class="titulodocard">Consultoria em Gestão Empresarial</h1>
+                <h2 align="center" class="textodocard">A consultoria em gestão analisa as condições financeiras, processuais, a estratégia, a gestão e os riscos empresariais.</h2>
             </div>
         </div>
         <div class="card" id="treinamento">
             <div class="cordocard">
-                <h1 align="center" class="titulodocard">Treinamento Profissional e Gerencial</h1>
-                <h2 align="center" class="textodocard">Lorem ipsum cubilia adipiscing ornare consequat condimentum sem, ad praesent eget fermentum eros aliquam, euismod a potenti</h2>
+                <h1 align="center" class="titulodocard">Educação Corporativa</h1>
+                <h2 align="center" class="textodocard">Formações de liderança e desenvolvimento de equipes através de uma abordagem de coaching e metodologias ativas.</h2>
             </div>
         </div>
         <div class="card" id="coach">
             <div class="cordocard">
-                <h1 align="center" class="titulodocard">Coach Pessoal, Profissional e Empresarial</h1>
-                <h2 align="center" class="textodocard">Lorem ipsum cubilia adipiscing ornare consequat condimentum sem, ad praesent eget fermentum eros aliquam, euismod a potenti</h2>
+                <h1 align="center" class="titulodocard">Sistemas de Gestão</h1>
+                <h2 align="center" class="textodocard">Treinamento, consultoria e auditoria nas áreas de Qualidade, Meio Ambiente, Segurança e Saúde, Segurança de Alimentos, Qualidade Automotiva (IATF) e Gestão de Riscos Empresariais</h2>
             </div>
         </div>
         <div class="card" id="webdesign">
             <div class="cordocard">
-                <h1 align="center" class="titulodocard">Web Design</h1>
-                <h2 align="center" class="textodocard">Lorem ipsum cubilia adipiscing ornare consequat condimentum sem, ad praesent eget fermentum eros aliquam, euismod a potenti</h2>
+                <h1 align="center" class="titulodocard">Produtividade</h1>
+                <h2 align="center" class="textodocard">Treinamento, consultoria em KAIZEN, Lean Manufacturing, Six Sigma, Teoria das Restrições, TPM, Core Tools IATF, Gestão de Produção, Qualidade e Manutenção e Sistemas de Controle de Processos</h2>
             </div>
         </div>
 </div>
