--- a/src/app/shared/quemsomos/quemsomos.component.css
+++ b/src/app/shared/quemsomos/quemsomos.component.css
@@ -13,14 +13,11 @@
 .text {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     background-image: url("../../../assets/infinitoOpacidade.png");
     background-position: center;
     background-repeat: no-repeat;
-}
-#quemsomos h1 {
-    margin:0;
 }
 #quemsomos p {
     width: 90%;
@@ -44,11 +41,11 @@
 @media only screen and (min-width: 700px) {
     #quemsomos {
         height: 600px;
-        font-size: 30px;
+        font-size: 22px;
     }
     .text {
         height: 90%;
-        background-size: contain;
+        background-size: 60%;
     }
   
     .clientes img {
@@ -56,7 +53,7 @@
         margin: 30px;
     }
     .nossosclientes{
-        font-size: 30px;
+        font-size: 22px;
     }
 }
 @media only screen and (max-width: 699px) {
